root/extra-manifests/grafana-ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-prometheus-stack
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.opendesk.raynet.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 3000
  tls:
  - hosts:
    - grafana.opendesk.raynet.de
    secretName: grafana-ui-tls
